<resources>
    <string name="app_name">Trail Run Log</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have an Account? Register Now.</string>
    <string name="password">Password</string>
    <string name="aledy_have_account">Already have an account? Login in.</string>
    <string name="register">Register</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="kilometers">Kilometers</string>
    <string name="denivelation">Denivelation</string>
    <string name="view_logs">View Logs</string>
    <string name="insert_new">Insert New</string>
</resources>
